--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 2025-01-24
+  Bug Fixes:
+    - Fixed tech signal icon generation issues with Krastorio 2 Spaced Out (Thanks ExileFox and Terrulin)
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-12-30
   Features:
